fix z-index for delete confirmation

--- a/src/styles/core/app/_entry.scss
+++ b/src/styles/core/app/_entry.scss
@@ -71,6 +71,7 @@
   bottom: 0;
   width: 100%;
   height: 100%;
+  z-index: 100; // ensure confirmation is above content (>=3)
 }
 
 .liveblog-entry-delete-confirm-buttons {
